Avoid some warnings at startup